Build++ errors
SVN-Revision: 10230